bad/incr_class_casted_null.example_compiler_output
ERROR
[1mbad/incr_class_casted_null.lat:6:11: [1;31merror: [0;1mexpression is not assignable[m
	((Y)null)++;
	         [1;32m^[m
[1mbad/incr_class_casted_null.lat:6:2: [1;34mnote: [0;1mexpression starts here[m
	((Y)null)++;
	[1;32m^[m
